style.css
/* ... */
#popUpDiv {
    position: absolute;
    width: 350px;
    height: 80%;
    top: 10%;
    bottom: 10%;
    right: 10px;
    vertical-align: middle;
    text-align: center;
}

#currentStore {
    position: relative;
    color: white;
    font-size: 1em;
    text-align: center;
    height: 50%;
    top: 25%;
    bottom: 25%;
}


#popUpButton {
    position: absolute;
    right: 15px;
    height: 100%;
    border-radius: 5px;
    border: solid white 2px;
    color: #ffc107;
    background-color: transparent;
    background-image: none;
    border-color: #ffc107;
}

#popUpButton:hover {
    color: #212529;
    background-color: #ffc107;
    border-color: #ffc107;
}

#listOfCounties,
#listOfCities,
#listOfStores {
    position: relative;
    width: 50%;
    left: 25%;
    right: 25%;
    border-radius: 5px;
}

#menuDiv {
    font-family: 'Muli', sans-serif;
    position: absolute;
    top: 65px;
    right: -15px;
    height: 200px;
    width: 250px;
    background-color: rgba(91, 35, 25, 1);
    color: white;
    border-radius: 0 0 5px 5px;
    text-align: center;
    font-size: 1.3em;
    padding-top: 10px;
    box-shadow: 0 3px 0 0 black;
    z-index: 1;
}

#store {
    font-family: 'Muli', sans-serif;
}

footer {
    width: 100%;
    margin-top: 20px;
    z-index: 1;
    background: rgba(91, 35, 25, 0.8);
    height: 40px;
    position: fixed;
    bottom: 0;
    -moz-box-shadow: 0 -3px 15px 0 black;
    -webkit-box-shadow: 0 -3px 15px 0 black;
    box-shadow: 0 -3px 15px 0 black;
}

#menuName {
    position: relative;
    top: 10px;
    vertical-align: center;
}

#link {
    position: absolute; 
    top: 65px;
    width: 90%;
    left: 5%;
    right: 5%;
    padding-top: 15px;
    padding-bottom: 15px;
    transition: .5s ease;
}

#link:hover {
    background-color: red;
    border-radius: 5px;
}

#signOutDiv {
    position: absolute; 
    top: 130px;
    width: 90%;
    left: 5%;
    right: 5%;
    padding-top: 15px;
    padding-bottom: 15px;
    transition: .5s ease;
    cursor: pointer;
}

#signOutDiv:hover {
    background-color: red;
    border-radius: 5px;
}

#logOut {
    position: relative;
    top: 110px;
}

.marginBottom {
    margin-bottom: 10px;
}

@media (max-width: 690px) {
    .infoDiv {
        width: 100%;
        margin-right: 0;
    }
    .searchField {
        width: 90vw;
        height: 50px;
        border-radius: 0px 0px 0px 0px;
        padding: 0;
    }
    #searchBeerInput {
        height: 38px;
        width: 300px;
        border: 1px solid transparent;
        padding: 0.375rem 0.75rem;
        line-height: 1.5;
        border-radius: 0.25rem;
    }

    .container {
        padding: 0;
        width: 90%;
        margin: auto;
    }
    .beer {
        padding: 0;
        width: 100%;
    }
    .card-body {
        padding: 0;
    }
    .header,
    .navbar-brand {
        font-size: 12pt;
    }
    body {
        background-image: none;
        background-color: #544436;
    }
    
    #popUp {
        width: 90%;
        height: 220px;
        left: 0;
        right: 0;
    }
    #confirmButton, #googleBtn, #facebookBtn, #searchBeerBtn, .btn-outline-warning, #popUpButton {
        color: #212529;
        background-color: #ffc107;
        border-color: #ffc107;
    }
    
    .btn-outline-light {
        color: #212529;
        background-color: #f8f9fa;
        border-color: #f8f9fa;
    }
    
    .storeBtn {
    border-color: transparent;
    }
}

@media (max-width: 490px) {
    #searchBeerInput {
        height: 38px;
        width: 189px;
        border: 1px solid transparent;
        padding: 0.375rem 0.75rem;
        line-height: 1.5;
        border-radius: 0.25rem;
    }
    body {
        background-color: #544436;
    }
    #currentStore {
        font-size: 0.8em;
    }
}

@media (max-width: 360px) {
    #searchBeerBtn {
        margin-left: 0px;
        width: 80px;
    }
    body {
        background-color: #544436;
    }
    #currentStore {
        text-align: left;
        margin-left: 20px;
    }
    #popUpDiv {
        width: 250px;
        height: 35px;
    }
    #confirmButton {
        width: 200px;
        margin: auto;
        margin-bottom: 20px;
        position: static;
    }
}

